--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,12 @@
             <artifactId>jaxb-api</artifactId>
             <version>2.3.1</version>
         </dependency>
-        
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>2.3.3</version>
+        </dependency>
+
         <!-- JUnit para testes -->
         <dependency>
             <groupId>junit</groupId>
